@startuml uml-src

package src.model {
    interface StaticEntity {
        +getPosition(): Position
    }
    class StaticEntityImpl implements StaticEntity

    interface MovableEntity extends StaticEntity {
        +moveTo(newPosition: Position): boolean
    }
    class MovableEntityImpl implements MovableEntity
    MovableEntityImpl -up-|> StaticEntityImpl

    interface MovementStrategy {
        +isMovementFeasible(): boolean
    }

    MovableEntityImpl o-right-> MovementStrategy

    interface EntityFactory {
        +createPawn(): StaticEntity
        +createKnight(): MovableEntity
    }

    class EntityFactoryImpl implements EntityFactory
    EntityFactoryImpl::createPawn ..> StaticEntity: <<creates>>
    EntityFactoryImpl::createKnight ..> MovableEntity : <<creates>>

    interface Grid {
        +getPawnsPositions(): Set<Position>
        +getKnightPosition(): Position
        +moveKnight(newPosition: Position)
    }
    class GridImpl implements Grid
    GridImpl "pawns" *-right-> StaticEntity
    GridImpl "knight" *--> MovableEntity

    interface GridFactory {
        +createWithSingleKnightAndPawn(width: int, height: int): Grid
        +createWithKnightAndMultiplePawn(width: int, height: int, numberOfPawns: int): Grid
        +create(width: int, height: int, knight: MovableEntity, pawn: StaticEntity): Grid
    }
    class GridFactoryImpl implements GridFactory
    GridFactoryImpl ..> Grid : <<creates>>
}

package src.controller {
    interface Logics {
        +hit(newPosition: Position)
        +isOver(): boolean
        +getKnightPosition(): Position
        +getPawnsPosition(): Set<Position>
    }

    class LogicsImpl implements Logics

    LogicsImpl *-right-> Grid
}

package test.model {
    abstract class EntityTest
    class KnightTest extends EntityTest
    class PawnTest extends EntityTest

    class GridFactoryTest
    class GridTest
}

package test.controller {
    class LogicsTest
}

@enduml